--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <title>MyRailwayClient</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<script src="https://maps.googleapis.com/maps/api/js?key&key=AIzaSyBDlLcHvt_VzI-31mvgHNtD_nyyTE9Qa5E"></script>-->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
