fix: dependency and add new static-resource-file

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:csec="http://www.huizaches.com/alex/spring-security-taglib">
 <head>
+  <csec:csrfMetaTags/>
   <meta charset="utf-8">
   <title>MyRailwayClient</title>
   <base href="/">
